--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kartik-malvi.github.io/my-site",
+  "homepage": "https://kartik-malvi.github.io/site",
 
   "name": "portfolio",
   
